--- a/home/pages/privacypolicy.html
+++ b/home/pages/privacypolicy.html
@@ -15,7 +15,7 @@
 		<meta property="og:image" content="img/howmuchisapint_logo_big.png"/>  
 	   
 		
-    	<link rel="icon" type="image/png" href="img/pint.png"/>
+    	<link rel="icon" type="image/png" href="../img/pint.png"/>
 		<link rel="stylesheet" href="css/bootstrap.min.css">
     </head>
 	<body>
@@ -33,7 +33,7 @@
 	    
 				<div class="col-md-12">
 			        <h1 class="text-primary">How much is a pint?</h1>
-					<img src="img/howmuchisapint_logo.png"  class="float-right">
+					<img src="../img/howmuchisapint_logo.png"  class="float-right">
 			        <h4>Ale, Stout or Lager <span class="text-muted">how much does a good old British pint really cost?</span></h4>
 				</div>
 
