--- a/home/pages/privacypolicy.html
+++ b/home/pages/privacypolicy.html
@@ -16,17 +16,17 @@
 	   
 		
     	<link rel="icon" type="image/png" href="../img/pint.png"/>
-		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href="../css/bootstrap.min.css">
     </head>
 	<body>
 		<script defer src="https://use.fontawesome.com/releases/v5.0.1/js/all.js"></script>
 		<script src="https://apis.google.com/js/platform.js" async defer></script>
 	
-		<script src="js/angular.min.js"></script>
-		<script src="js/jquery-3.2.1.slim.min.js"></script>
-		<script src="js/popper.min.js"></script>
-		<script src="js/bootstrap.min.js"></script>
-		<script src="js/jquery.min.js"></script>
+		<script src="../js/angular.min.js"></script>
+		<script src="../js/jquery-3.2.1.slim.min.js"></script>
+		<script src="../js/popper.min.js"></script>
+		<script src="../js/bootstrap.min.js"></script>
+		<script src="../js/jquery.min.js"></script>
 
 		<div class="container" ng-app="app">
 			<div ng-controller="appCtrl">
