--- a/home/index.html
+++ b/home/index.html
@@ -632,7 +632,7 @@
 			    $scope.set_user = function(id, name)
 			    {
 	  				$scope.user_name = name;
-	        		$http.get('https://2h9xwsp1o4.execute-api.eu-west-2.amazonaws.com/Prod/drinker' + id).
+	        		$http.get('https://api.howmuchisapint.com/service_dev/drinker' + id).
 						then(function(response)
 						{
 							if (response.data.data['drinker'].length == 1)
@@ -666,7 +666,7 @@
 					$scope.prices_pub_type_data_list = [];
 					if ($scope.prices_pub_country != null)
 					{
-					    $http.get('https://2h9xwsp1o4.execute-api.eu-west-2.amazonaws.com/Prod/pub').
+					    $http.get('https://api.howmuchisapint.com/service_dev/pub').
 							then(function(response)
 							{
 								for (p in response.data.data.pub)
@@ -716,7 +716,7 @@
 					$scope.prices_pub_type_data_list = [];
 					if ($scope.prices_pub_country != null)
 					{
-					    $http.get('https://2h9xwsp1o4.execute-api.eu-west-2.amazonaws.com/Prod/pub').
+					    $http.get('https://api.howmuchisapint.com/service_dev/pub').
 							then(function(response)
 							{
 								for (p in response.data.data.pub)
@@ -753,7 +753,7 @@
 					$scope.prices_pub = null;
 					$scope.prices_pub_type_data_list = [];
 					$scope.prices_pub_data_list = [];
-				    $http.get('https://2h9xwsp1o4.execute-api.eu-west-2.amazonaws.com/Prod/pub').
+				    $http.get('https://api.howmuchisapint.com/service_dev/pub').
 						then(function(response)
 						{
 							for (p in response.data.data.pub)
@@ -789,7 +789,7 @@
 					$scope.prices_pub_data_list = [];
 					if ($scope.prices_pub_type != null)
 					{
-					    $http.get('https://2h9xwsp1o4.execute-api.eu-west-2.amazonaws.com/Prod/pub').
+					    $http.get('https://api.howmuchisapint.com/service_dev/pub').
 							then(function(response)
 							{
 								for (p in response.data.data.pub)
@@ -829,7 +829,7 @@
 					$scope.prices_beer_data_list = [];
 					if ($scope.prices_beer_type != null)
 					{
-					    $http.get('https://2h9xwsp1o4.execute-api.eu-west-2.amazonaws.com/Prod/beer').
+					    $http.get('https://api.howmuchisapint.com/service_dev/beer').
 							then(function(response)
 							{
 								for (p in response.data.data.beer)
@@ -861,7 +861,7 @@
 				    	$scope.prices_display_fxrate = 1;
 						if ($scope.prices_ccy != $scope.prices_display_ccy)
 						{
-						    $http.get('https://2h9xwsp1o4.execute-api.eu-west-2.amazonaws.com/Prod/fxrate/latest/' + $scope.prices_ccy + $scope.prices_display_ccy).
+						    $http.get('https://api.howmuchisapint.com/service_dev/fxrate/latest/' + $scope.prices_ccy + $scope.prices_display_ccy).
 								then(function(response)
 								{
 									if (response.data.data['fx-rate'] !== undefined)
@@ -971,7 +971,7 @@
 					var stats = [];
 		  			$scope.headline_stat1 = '';
 		  			$scope.headline_stat2 = '';
-		    		$http.get('https://2h9xwsp1o4.execute-api.eu-west-2.amazonaws.com/Prod/beerpricestats/BeerTypeAndPubTypeAndTown' + params).
+		    		$http.get('https://api.howmuchisapint.com/service_dev/beerpricestats/BeerTypeAndPubTypeAndTown' + params).
 						then(function(response)
 						{
 				  			stats = response.data.data['beer-price-stats'];
@@ -980,7 +980,7 @@
 					  			$scope.headline_stat1 = 'Be the first to submit a pub pint price in ';
 					  			$scope.headline_stat2 = $scope.home_town;
 					  			
-					    		$http.get('https://2h9xwsp1o4.execute-api.eu-west-2.amazonaws.com/Prod/beerpricestats/BeerTypeAndPubTypeAndCity' + params).
+					    		$http.get('https://api.howmuchisapint.com/service_dev/beerpricestats/BeerTypeAndPubTypeAndCity' + params).
 									then(function(response)
 									{
 							  			stats = response.data.data['beer-price-stats'];
@@ -1017,7 +1017,7 @@
 						});
 		  			$scope.headline_latest = [];
 		  			$scope.headline_latest_ccy_symbol = [];
-		    		$http.get('https://2h9xwsp1o4.execute-api.eu-west-2.amazonaws.com/Prod/beerprice?page=1&pageSize=5&pubCountry=' + $scope.home_country).
+		    		$http.get('https://api.howmuchisapint.com/service_dev/beerprice?page=1&pageSize=5&pubCountry=' + $scope.home_country).
 						then(function(response)
 						{
 				  			prices = response.data.data['beer-price'];
@@ -1066,7 +1066,7 @@
 					{
 						params = params + '&name=' + $scope.add_beer_name;
 					}				
-	        		$http.get('https://2h9xwsp1o4.execute-api.eu-west-2.amazonaws.com/Prod/beer' + params).
+	        		$http.get('https://api.howmuchisapint.com/service_dev/beer' + params).
 						then(function(response)
 						{
 			  				$scope.beer_data = response.data.data;
@@ -1119,7 +1119,7 @@
 					{
 						params = params + '&name=' + $scope.add_pub_name;
 					}				
-	        		$http.get('https://2h9xwsp1o4.execute-api.eu-west-2.amazonaws.com/Prod/pub' + params).
+	        		$http.get('https://api.howmuchisapint.com/service_dev/pub' + params).
 						then(function(response)
 						{
 			  				$scope.pub_data = response.data.data;
@@ -1194,7 +1194,7 @@
 					$scope.price_data = '';
 					$scope.working_prices = true;
 					var params = $scope.get_prices_params(true);
-	        		$http.get('https://2h9xwsp1o4.execute-api.eu-west-2.amazonaws.com/Prod/beerpricestats/BeerTypeAndPubTypeAndCountry' + params).
+	        		$http.get('https://api.howmuchisapint.com/service_dev/beerpricestats/BeerTypeAndPubTypeAndCountry' + params).
 						then(function(response)
 						{
 			  				$scope.price_stat_data = response.data.data;
@@ -1231,7 +1231,7 @@
 					$scope.price_data = '';
 					$scope.working_prices = true;
 					var params = $scope.get_prices_params();
-	        		$http.get('https://2h9xwsp1o4.execute-api.eu-west-2.amazonaws.com/Prod/beerprice' + params).
+	        		$http.get('https://api.howmuchisapint.com/service_dev/beerprice' + params).
 						then(function(response)
 						{
 			  				$scope.price_data = response.data.data;
@@ -1266,7 +1266,7 @@
 			    	$scope.price_tags = [];
 			    	$scope.pub_tags = [];
 			    	$scope.beer_tags = [];
-				    $http.get('https://2h9xwsp1o4.execute-api.eu-west-2.amazonaws.com/Prod/refdata/country').
+				    $http.get('https://api.howmuchisapint.com/service_dev/refdata/country').
 						then(function(response)
 						{
 			  				$scope.country_data_list = response.data.data;
@@ -1274,7 +1274,7 @@
 				  		function(response) 
 				  		{
 						});
-				    $http.get('https://2h9xwsp1o4.execute-api.eu-west-2.amazonaws.com/Prod/refdata/ccy').
+				    $http.get('https://api.howmuchisapint.com/service_dev/refdata/ccy').
 						then(function(response)
 						{
 			  				$scope.ccy_data_list = response.data.data;
@@ -1282,7 +1282,7 @@
 				  		function(response) 
 				  		{
 						});
-				    $http.get('https://2h9xwsp1o4.execute-api.eu-west-2.amazonaws.com/Prod/refdata/pubtype').
+				    $http.get('https://api.howmuchisapint.com/service_dev/refdata/pubtype').
 						then(function(response)
 						{
 			  				$scope.pub_type_data_list = response.data.data;
@@ -1290,7 +1290,7 @@
 				  		function(response) 
 				  		{
 						});
-				    $http.get('https://2h9xwsp1o4.execute-api.eu-west-2.amazonaws.com/Prod/pub').
+				    $http.get('https://api.howmuchisapint.com/service_dev/pub').
 						then(function(response)
 						{
 							for (i = 0; i < response.data.data.pub.length; i++)
@@ -1322,7 +1322,7 @@
 				  		function(response) 
 				  		{
 						});
-				    $http.get('https://2h9xwsp1o4.execute-api.eu-west-2.amazonaws.com/Prod/refdata/beertype').
+				    $http.get('https://api.howmuchisapint.com/service_dev/refdata/beertype').
 						then(function(response)
 						{
 			  				$scope.beer_type_data_list = response.data.data;
@@ -1330,7 +1330,7 @@
 				  		function(response) 
 				  		{
 						});
-	        		$http.get('https://2h9xwsp1o4.execute-api.eu-west-2.amazonaws.com/Prod/beer').
+	        		$http.get('https://api.howmuchisapint.com/service_dev/beer').
 						then(function(response)
 						{
 							for (i = 0; i < response.data.data.beer.length; i++)
@@ -1361,7 +1361,7 @@
 				  		function(response) 
 				  		{
 						});
-				    $http.get('https://2h9xwsp1o4.execute-api.eu-west-2.amazonaws.com/Prod/beerprice?tags=unverified').
+				    $http.get('https://api.howmuchisapint.com/service_dev/beerprice?tags=unverified').
 						then(function(response)
 						{
 							for (i = 0; i < response.data.data['beer-price'].length; i++)
@@ -1425,7 +1425,7 @@
 							}
 						}
 				    	msg = msg + '}}';
-		        		$http.post('https://2h9xwsp1o4.execute-api.eu-west-2.amazonaws.com/Prod/beer', msg).
+		        		$http.post('https://api.howmuchisapint.com/service_dev/beer', msg).
 							then(function(response)
 							{
 								console.log(response)
@@ -1481,7 +1481,7 @@
 							}
 						}
 				    	msg = msg + '}}';
-		        		$http.post('https://2h9xwsp1o4.execute-api.eu-west-2.amazonaws.com/Prod/pub', msg).
+		        		$http.post('https://api.howmuchisapint.com/service_dev/pub', msg).
 							then(function(response)
 							{
 				  				if (response.data.status == "OK")
@@ -1571,7 +1571,7 @@
 							}
 						}
 				    	msg = msg + '}}';
-		        		$http.post('https://2h9xwsp1o4.execute-api.eu-west-2.amazonaws.com/Prod/beerprice', msg).
+		        		$http.post('https://api.howmuchisapint.com/service_dev/beerprice', msg).
 							then(function(response)
 							{
 				  				if (response.data.status == "OK")
