--- a/home/index.html
+++ b/home/index.html
@@ -635,10 +635,10 @@
 	        		$http.get('https://api.howmuchisapint.com/service_dev/drinker/' + id).
 						then(function(response)
 						{
-							if (response.data.data['drinker'].length == 1)	
+							if (response.data.data.drinker !== undefined)	
 							{
-				  				$scope.user_type = response.data.data.drinker[0].type;
-				  				$scope.user_name = response.data.data.drinker[0].name;
+				  				$scope.user_type = response.data.data.drinker.type;
+				  				$scope.user_name = response.data.data.drinker.name;
 				  				console.log($scope.user_type);
 				  				console.log($scope.user_name);
 				  				
