--- a/home/index.html
+++ b/home/index.html
@@ -629,7 +629,7 @@
 
 				$scope.get_ip();
 
-			    $scope.set_user = function(id, name, enail)
+			    $scope.set_user = function(id, name, email)
 			    {
 	  				$scope.user_name = name;
 	        		$http.get('https://api.howmuchisapint.com/test/drinker/' + id).
