--- a/home/index.html
+++ b/home/index.html
@@ -1413,7 +1413,7 @@
 			    	}
 			    	else
 			    	{
-			    		var msg = '{' + ($scope.user_type=='GUEST' ? '"guest-email":"' + $scope.add_beer_guest_email : '"token":"' + user_token) + '","beer":{"type":"' + $scope.add_beer_type + '","name":"' + $scope.add_beer_name + '"';
+			    		var msg = '{"body":{' + ($scope.user_type=='GUEST' ? '"guest-email":"' + $scope.add_beer_guest_email : '"token":"' + user_token) + '","beer":{"type":"' + $scope.add_beer_type + '","name":"' + $scope.add_beer_name + '"';
 			    		if ($scope.add_beer_tags.length > 0)
 			    		{ 
 				    		var tags = $scope.add_beer_tags.split(' ');
@@ -1427,7 +1427,7 @@
 								msg = msg.substring(0,msg.length-1) + ']';
 							}
 						}
-				    	msg = msg + '}}';
+				    	msg = msg + '}}}';
 		        		$http.post('https://api.howmuchisapint.com/test/beer', msg).
 							then(function(response)
 							{
@@ -1469,7 +1469,7 @@
 			    	}
 			    	else
 			    	{
-			    		var msg = '{' + ($scope.user_type=='GUEST' ? '"guest-email":"' + $scope.guest_email : '"token":"' + user_token) + '","pub":{"type":"' + $scope.add_pub_type + '","name":"' + $scope.add_pub_name + '","country":"' + $scope.add_pub_country + '","city":"' + $scope.add_pub_city + '","town":"' + $scope.add_pub_town + '","post-code":"' + $scope.add_pub_pc + '"';
+			    		var msg = '{"body":{' + ($scope.user_type=='GUEST' ? '"guest-email":"' + $scope.guest_email : '"token":"' + user_token) + '","pub":{"type":"' + $scope.add_pub_type + '","name":"' + $scope.add_pub_name + '","country":"' + $scope.add_pub_country + '","city":"' + $scope.add_pub_city + '","town":"' + $scope.add_pub_town + '","post-code":"' + $scope.add_pub_pc + '"';
 			    		if ($scope.add_pub_tags.length > 0)
 			    		{ 
 				    		var tags = $scope.add_pub_tags.split(' ');
@@ -1483,7 +1483,7 @@
 								msg = msg.substring(0,msg.length-1) + ']';
 							}
 						}
-				    	msg = msg + '}}';
+				    	msg = msg + '}}}';
 		        		$http.post('https://api.howmuchisapint.com/test/pub', msg).
 							then(function(response)
 							{
@@ -1525,7 +1525,7 @@
 			    }
 			    $scope.add_tagalert = function(ename, tora)
 			    {
-	        		$http.post('https://www.howmuchisapint.com:8443/beerprices/service/manage/v1/' + ename + '/' + tora, '{' + ($scope.user_type=='GUEST' ? '"guest-email":"' + $scope.guest_email : '"token":"' + user_token) + '","' + ename + '-id":' + id + '","tag":"' + tag + '"}').
+	        		$http.post('https://www.howmuchisapint.com:8443/beerprices/service/manage/v1/' + ename + '/' + tora, '{"body":{' + ($scope.user_type=='GUEST' ? '"guest-email":"' + $scope.guest_email : '"token":"' + user_token) + '","' + ename + '-id":' + id + '","tag":"' + tag + '"}}').
 						then(function(response)
 						{
 			  				if (response.data.status == "OK")
@@ -1559,7 +1559,7 @@
 			    	{
 					    var today = new Date();
 					    var date = today.getFullYear() + (today.getMonth()>8 ? '' : '0') + (today.getMonth() + 1) + (today.getDate()>9 ? '' : '0') + today.getDate();
-			    		var msg = '{' + ($scope.user_type=='GUEST' ? '"guest-email":"' + $scope.guest_email : '"token":"' + user_token) + '","beer-price":{"date":"' + date + '","price":' + $scope.add_price_amount + ',"pub":{"audit":{"id":' + $scope.prices_pub.audit.id + '}},"beer":{"audit":{"id":' + $scope.prices_beer.audit.id + '}}';
+			    		var msg = '{"body":{' + ($scope.user_type=='GUEST' ? '"guest-email":"' + $scope.guest_email : '"token":"' + user_token) + '","beer-price":{"date":"' + date + '","price":' + $scope.add_price_amount + ',"pub":{"audit":{"id":' + $scope.prices_pub.audit.id + '}},"beer":{"audit":{"id":' + $scope.prices_beer.audit.id + '}}';
 			    		if ($scope.prices_tags.length > 0)
 			    		{ 
 				    		var tags = $scope.prices_tags.split(' ');
@@ -1573,7 +1573,7 @@
 								msg = msg.substring(0,msg.length-1) + ']';
 							}
 						}
-				    	msg = msg + '}}';
+				    	msg = msg + '}}}';
 		        		$http.post('https://api.howmuchisapint.com/test/beerprice', msg).
 							then(function(response)
 							{
