--- a/home/index.html
+++ b/home/index.html
@@ -1415,16 +1415,17 @@
 			    		var msg = '{' + ($scope.user_type=='GUEST' ? '"guest-email":"' + $scope.add_beer_guest_email : '"token":"' + user_token) + '","beer":{"type":"' + $scope.add_beer_type + '","name":"' + $scope.add_beer_name + '"';
 			    		if ($scope.add_beer_tags.length > 0)
 			    		{ 
-				    		var tags = $scope.add_beer_tags.split(' ');
+					    	msg = msg + ',"tags":[';
+							var tags = $scope.add_beer_tags.split(' ');
 				    		if (tags.length > 0)
 				    		{
-					    		msg = msg + ',"tags":[';
 					    		for (i = 0; i < tags.length; i++)
 					    		{
 					    			msg = msg + '"' + tags[i] + '",';
 					    		}
-								msg = msg.substring(0,msg.length-1) + ']';
+								msg = msg.substring(0,msg.length-1);
 							}
+							msg =  + '],"alerts":[]';
 						}
 				    	msg = msg + '}}';
 		        		$http.post('https://api.howmuchisapint.com/test/beer', msg).
@@ -1442,7 +1443,7 @@
 					  				$scope.upd_prices_beer_type();
 					  				$scope.prices_beer = response.data.data.beer[0];
 					  			}
-					  			else if (response.data.status.indexOf("ERROR") > -1)
+					  			else if (response.status.indexOf("ERROR") > -1)
 					  			{
 									$scope.add_beer_err = response.data.info;
 					  			}
@@ -1471,16 +1472,17 @@
 			    		var msg = '{' + ($scope.user_type=='GUEST' ? '"guest-email":"' + $scope.guest_email : '"token":"' + user_token) + '","pub":{"type":"' + $scope.add_pub_type + '","name":"' + $scope.add_pub_name + '","country":"' + $scope.add_pub_country + '","city":"' + $scope.add_pub_city + '","town":"' + $scope.add_pub_town + '","post-code":"' + $scope.add_pub_pc + '"';
 			    		if ($scope.add_pub_tags.length > 0)
 			    		{ 
+					    	msg = msg + ',"tags":[';
 				    		var tags = $scope.add_pub_tags.split(' ');
 				    		if (tags.length > 0)
 				    		{
-					    		msg = msg + ',"tags":[';
 					    		for (i = 0; i < tags.length; i++)
 					    		{
 					    			msg = msg + '"' + tags[i] + '",';
 					    		}
-								msg = msg.substring(0,msg.length-1) + ']';
+								msg = msg.substring(0,msg.length-1);
 							}
+							msg =  + '],"alerts":[]';
 						}
 				    	msg = msg + '}}';
 		        		$http.post('https://api.howmuchisapint.com/test/pub', msg).
@@ -1503,7 +1505,7 @@
 					  				$scope.upd_prices_pub_type();
 					  				$scope.prices_pub = response.data.data.pub;
 					  			}
-					  			else if (response.data.status.indexOf("ERROR") > -1)
+					  			else if (response.status.indexOf("ERROR") > -1)
 					  			{
 									$scope.add_pub_err = response.data.info;
 					  			}
@@ -1530,7 +1532,7 @@
 			  				if (response.data.status == "OK")
 			  				{
 				  			}
-				  			else if (response.data.status.indexOf("ERROR") > -1)
+				  			else if (response.status.indexOf("ERROR") > -1)
 				  			{
 				  			}
 				  		}, 
@@ -1561,17 +1563,18 @@
 			    		var msg = '{' + ($scope.user_type=='GUEST' ? '"guest-email":"' + $scope.guest_email : '"token":"' + user_token) + '","beer-price":{"date":"' + date + '","price":' + $scope.add_price_amount + ',"pub":{"audit":{"id":' + $scope.prices_pub.audit.id + '}},"beer":{"audit":{"id":' + $scope.prices_beer.audit.id + '}}';
 			    		if ($scope.prices_tags.length > 0)
 			    		{ 
+							msg = msg + ',"tags":[';
 				    		var tags = $scope.prices_tags.split(' ');
 				    		if (tags.length > 0)
 				    		{
-					    		msg = msg + ',"tags":[';
 					    		for (i = 0; i < tags.length; i++)
 					    		{
 					    			msg = msg + '"' + tags[i] + '",';
 					    		}
-								msg = msg.substring(0,msg.length-1) + ']';
+								msg = msg.substring(0,msg.length-1);
 							}
 						}
+						msg =  + ']';
 				    	msg = msg + '}}';
 		        		$http.post('https://api.howmuchisapint.com/test/beerprice', msg).
 							then(function(response)
@@ -1583,13 +1586,14 @@
 					  				$scope.add_price_amount = 0.00;
 					  				$scope.prices_tags = '';
 					  			}
-					  			else if (response.data.status.indexOf("ERROR") > -1)
+					  			else if (response.status.indexOf("ERROR") > -1)
 					  			{
 									$scope.add_price_err = response.data.info;
 					  			}
 					  		}, 
 					  		function(response) 
 					  		{
+								console.log(response)
 								$scope.add_price_err = (response.statusText == '' ? 'Unknown' : response.statusText) + " [" + response.status + "]";
 							});
 			    	}
