--- a/home/index.html
+++ b/home/index.html
@@ -227,7 +227,7 @@
 
 									<div class="wsite-spacer" style="height:20px;"></div>
 
-							  		<!--span ng-if="user_type=='GUEST'"-->
+							  		<span ng-if="user_type=='GUEST'">
 										<div class="form-row">
 											<div class="col">
 												<button type="button" class="btn btn-primary" ng-click="get_beers()">List Beers</button>
@@ -244,7 +244,7 @@
 												<button type="button" class="btn btn-primary" ng-click="add_beer()">Add Beer</button>
 									  		</div>
 								  		</div>
-							  		<!--/span-->
+							  		</span>
 
 							  		<span ng-show="user_type!='GUEST'">
 										<div class="form-row">
