--- a/home/index.html
+++ b/home/index.html
@@ -1564,7 +1564,7 @@
 					$scope.get_prices_info = '';
 					$scope.price_stat_data = '';
 					$scope.price_data = '';
-			    	if ($scope.add_price_amount == 0 || $scope.prices_pub.audit.id == 0 || $scope.prices_beer.audit.id == 0)	
+			    	if ($scope.add_price_amount == 0 || $scope.prices_pub.audit.id == "0" || $scope.prices_beer.audit.id == "0")	
 			    	{
 						$scope.price_err = 'Incomplete - pub, beer and price required';
 			    	}
@@ -1577,7 +1577,7 @@
 						$scope.working_prices = true;
 					    var today = new Date();
 					    var date = today.getFullYear() + (today.getMonth()>8 ? '' : '0') + (today.getMonth() + 1) + (today.getDate()>9 ? '' : '0') + today.getDate();
-			    		var msg = '{' + ($scope.user_type=='GUEST' ? '"guest-email":"' + $scope.add_price_guest_email : '"token":"' + user_token) + '","beer-price":{"date":"' + date + '","price":' + $scope.add_price_amount + ',"pub":{"audit":{"id":' + $scope.prices_pub.audit.id + '}},"beer":{"audit":{"id":' + $scope.prices_beer.audit.id + '}}';
+			    		var msg = '{' + ($scope.user_type=='GUEST' ? '"guest-email":"' + $scope.add_price_guest_email : '"token":"' + user_token) + '","beer-price":{"date":"' + date + '","price":' + $scope.add_price_amount + ',"pub":{"audit":{"id":"' + $scope.prices_pub.audit.id + '"}},"beer":{"audit":{"id":"' + $scope.prices_beer.audit.id + '"}}';
 						msg = msg + ',"tags":[';
 			    		if ($scope.prices_tags.length > 0)
 			    		{ 
